infra/k3s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argos-wallet
  labels:
    name: argos-wallet
